# voidx-public-app

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.bak  sdkconfig.old
components/voidx/: CMakeLists.txt  linker_usb.lf
components/voidx/include/: Bsp.hpp  Debug.hpp  Defaults.hpp  DrawerChooser.hpp  DrawerColor.hpp  DrawerFastNodes.hpp  DrawerHome.hpp  DrawerKeyboard.hpp  DrawerList.hpp  DrawerNode.hpp  DrawerNodeFloat.hpp  DrawerPopup.hpp  DrawerSetup.hpp  Event.hpp  License.hpp  Light.hpp  Node.hpp  NodeAction.hpp  NodeControl.hpp  NodeControlExp.hpp  NodeControlMidiPC.hpp  NodeEnum.hpp  NodeFloat.hpp  NodeItem.hpp  NodeList.hpp  NodeOnOff.hpp  NodeParList.hpp  NodePassword.hpp  NodePreset.hpp  Security.hpp  Storage.hpp  System.hpp  Time.hpp  utils.hpp
components/voidx/include/codec/: CodecInterface.hpp  Pcm1865.hpp  audioSettings.h
components/voidx/include/com/: Bluetooth.hpp  ComInterface.hpp  Serial.hpp  Wifi.hpp
components/voidx/include/controller/: Controller.hpp  ControllerMidi.hpp  ControllerMidiPC.hpp  SourceMidi.hpp
components/voidx/include/display/: font3x5.h  font5x8.h  glcd.h  glcd_chart.h  glcd_chart.hpp  graphics.h  lcd.hpp  ssd1306.h
components/voidx/include/display/fonts/: California7x20.h  California8x22.h  California8x24.h  Callibri10.h  Cascadia_Mono_SB_9x16.h  DejaVu_Sans_16x9.h  Liberation_Sans_16.h  ZevvPeep8x16.h  allFonts.h  fixednums16x40.h  fixednums16x44.h  fixednums17x40.h  fixednums20x40.h  newbasic3x5.h
components/voidx/include/driver/: ad5263.hpp  i2c_bus.h  i2c_k.h  internal_adc.h  io.h  io_array.hpp  nimble_nordic_uart.h  spi.h
components/voidx/include/driver/update/: update.hpp
components/voidx/include/dsp/: AudioBlock.hpp  AudioProcessor.hpp  AudioUSB.hpp  DigitalDistortion.hpp  MK_optimized_DSPLIB.h  PhaseVocoder.hpp  QuadBiquad.hpp  QuadDIST.hpp  QuadDIST_ADAA.hpp  QuadFIR.hpp  QuadFastFIR.hpp  QuadUp2.hpp
components/voidx/include/usb/: tusb_config.h  uac_config.h  usb_descriptors.h
main/: .cproject  (+4 more)
(+19 files in other folders)
